// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with websocket connected, authenticated 1`] = `
<div
  className="App__div"
>
  <Uncontrolled(Navbar)
    bsStyle="default"
    inverse={true}
  >
    <NavbarHeader>
      <img
        alt="logo"
        className="App__logo--animated"
        src="logo.svg"
      />
    </NavbarHeader>
    <Nav
      bsClass="nav"
      className="App__Nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <NavsAuthenticated />
      <CurrentItem
        route="/"
      />
    </Nav>
    <Nav
      bsClass="nav"
      className="App__Nav"
      justified={false}
      pullLeft={false}
      pullRight={true}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="signout"
        replace={false}
        strict={false}
        to="/signout"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={6}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="log-out"
          />
           Odhlášení
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/about"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={7}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="question-sign"
          />
           O aplikaci
        </NavItem>
      </LinkContainer>
    </Nav>
  </Uncontrolled(Navbar)>
  <main>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/signin"
      />
      <Route
        component={[Function]}
        path="/casomeric"
      />
      <Route
        component={[Function]}
        path="/ucastnici"
      />
      <Route
        component={[Function]}
        path="/prihlasky"
      />
      <Route
        component={[Function]}
        path="/prihlaseni"
      />
      <Route
        component={[Function]}
        path="/startujici"
      />
      <Route
        component={[Function]}
        path="/startovni-cisla"
      />
      <Route
        component={[Function]}
        path="/ubytovani"
      />
      <Route
        component={[Function]}
        path="/signout"
      />
      <Route
        component={[Function]}
        path="/about"
      />
      <Redirect
        push={false}
        to="/"
      />
    </Switch>
  </main>
</div>
`;

exports[`with websocket connected, not authenticated 1`] = `
<div
  className="App__div"
>
  <Uncontrolled(Navbar)
    bsStyle="default"
    inverse={true}
  >
    <NavbarHeader>
      <img
        alt="logo"
        className="App__logo--animated"
        src="logo.svg"
      />
    </NavbarHeader>
    <Nav
      bsClass="nav"
      className="App__Nav"
      justified={false}
      pullLeft={false}
      pullRight={true}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/signin"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={5}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="log-in"
          />
           Přihlášení
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/about"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={7}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="question-sign"
          />
           O aplikaci
        </NavItem>
      </LinkContainer>
    </Nav>
  </Uncontrolled(Navbar)>
  <main>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/signin"
      />
      <Route
        component={[Function]}
        path="/casomeric"
      />
      <Route
        component={[Function]}
        path="/ucastnici"
      />
      <Route
        component={[Function]}
        path="/prihlasky"
      />
      <Route
        component={[Function]}
        path="/prihlaseni"
      />
      <Route
        component={[Function]}
        path="/startujici"
      />
      <Route
        component={[Function]}
        path="/startovni-cisla"
      />
      <Route
        component={[Function]}
        path="/ubytovani"
      />
      <Route
        component={[Function]}
        path="/signout"
      />
      <Route
        component={[Function]}
        path="/about"
      />
      <Redirect
        push={false}
        to="/"
      />
    </Switch>
  </main>
</div>
`;

exports[`with websocket disconnected, authenticated 1`] = `
<div
  className="App__div"
>
  <Uncontrolled(Navbar)
    bsStyle="default"
    inverse={true}
  >
    <NavbarHeader>
      <img
        alt="logo"
        className="App__logo"
        src="logo.svg"
      />
    </NavbarHeader>
    <Nav
      bsClass="nav"
      className="App__Nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <NavsAuthenticated />
      <CurrentItem
        route="/"
      />
    </Nav>
    <Nav
      bsClass="nav"
      className="App__Nav"
      justified={false}
      pullLeft={false}
      pullRight={true}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="signout"
        replace={false}
        strict={false}
        to="/signout"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={6}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="log-out"
          />
           Odhlášení
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/about"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={7}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="question-sign"
          />
           O aplikaci
        </NavItem>
      </LinkContainer>
    </Nav>
  </Uncontrolled(Navbar)>
  <main>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/signin"
      />
      <Route
        component={[Function]}
        path="/casomeric"
      />
      <Route
        component={[Function]}
        path="/ucastnici"
      />
      <Route
        component={[Function]}
        path="/prihlasky"
      />
      <Route
        component={[Function]}
        path="/prihlaseni"
      />
      <Route
        component={[Function]}
        path="/startujici"
      />
      <Route
        component={[Function]}
        path="/startovni-cisla"
      />
      <Route
        component={[Function]}
        path="/ubytovani"
      />
      <Route
        component={[Function]}
        path="/signout"
      />
      <Route
        component={[Function]}
        path="/about"
      />
      <Redirect
        push={false}
        to="/"
      />
    </Switch>
  </main>
</div>
`;
